# chucknorris

./: .gitignore  .hgtags  .travis.yml  CHANGES.rst  NEWS.rst  README.rst  README.txt  config.yaml  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
chucknorris/: pmxbot.py  pronoun.py  quips.py  quips.txt  test_plugin.py
docs/: conf.py  index.rst
newsfragments/: +07c8c367.feature.rst
